readability issues patched

--- a/resources/css/challenge.css
+++ b/resources/css/challenge.css
@@ -1,5 +1,5 @@
 .challenge-toast {
-    @apply absolute bottom-0 left-0 ml-5 mb-5 text-left py-1 px-8 text-white flex items-center;
+    @apply fixed bottom-0 left-0 ml-5 mb-5 text-left py-1 px-8 text-white flex items-center;
     height: 70px;
     border-radius: 100px;
     background: #36CFFF;
